--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -1,9 +1,5 @@
 name: NewsAppBuild
-on:
-  pull_request :
-    branches : [ master ]
-    push :
-      branches : [ master ]
+on: push
 
 jobs:
   build:
