--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -9,6 +9,9 @@ jobs:
         uses: actions/checkout@v4
       - name : Setup Java
         uses: actions/setup-java@v3
+        with:
+          java-version: '18'
+          distribution: 'adopt'
       - name : Build with Gradle
         run : ./gradlew build
       - name : Upload a build artifact
